Update Teleco customer churn.ipynb

--- a/Teleco customer churn.ipynb
+++ b/Teleco customer churn.ipynb
@@ -476,7 +476,7 @@
     "    'Coefficient': coefficients\n",
     "})\n",
     "feature_importance['Absolute_Coefficient'] = feature_importance['Coefficient']\n",
-    "feature_importance = feature_importance.sort_values(by='Absolute_Coefficient', ascending=False)\n",
+    "feature_importance = feature_importance.sort_values(by='Coefficient', ascending=False)\n",
     "\n",
     "# Plot feature importance\n",
     "plt.figure(figsize=(10, 6))\n",
