Update Teleco customer churn.ipynb

--- a/Teleco customer churn.ipynb
+++ b/Teleco customer churn.ipynb
@@ -56,7 +56,6 @@
     "cust_churn['TotalCharges'] = pd.to_numeric(cust_churn['TotalCharges'],errors = 'coerce')\n",
     "\n",
     "\n",
-    "\n",
     "#Turn the y values into a binary output\n",
     "#Turn churn into an integer binary value\n",
     "cust_churn.loc[cust_churn['Churn'] == 'No', 'Churn'] = 0\n",
@@ -305,6 +304,14 @@
    "outputs": [],
    "source": [
     "def OHE_cust_churn_fun(df):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    One hot encode all object variables from an input data frame.\n",
+    "    If a column has a 'No' in it, meaning its just the opposite of a yes ohe column, it can be dropped\n",
+    "\n",
+    "    Returns the dataframe with the object varibles droped and the OHE columns in place.\n",
+    "    \"\"\"\n",
+    "\n",
     "    # One hot encode all object variables unless there are 2 columns, then do it as one\n",
     "    object_cols = df.select_dtypes(include=['object']).columns\n",
     "    encoder = OneHotEncoder(drop=None, sparse_output=False)\n",
