Update Teleco customer churn.ipynb

--- a/Teleco customer churn.ipynb
+++ b/Teleco customer churn.ipynb
@@ -32,7 +32,9 @@
     "from sklearn.metrics import f1_score\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "import random"
    ]
   },
   {
@@ -369,7 +371,7 @@
    "source": [
     "# find the number of branches needed to minimize the error \n",
     "# no emphasise on high precision or recall so f1 score used to get both \n",
-    "#70 appears to be the best \n",
+    "# 70 appears to be the best \n",
     "estimators = list(range(2, 101))\n",
     "f1_scores = []\n",
     "\n",
@@ -428,7 +430,6 @@
     }
    ],
    "source": [
-    "import random \n",
     "#Check if score is better than random guessing y_test\n",
     "for i in range(0,5):\n",
     "    rnd_set = []\n",
