Update Teleco customer churn.ipynb

--- a/Teleco customer churn.ipynb
+++ b/Teleco customer churn.ipynb
@@ -25,8 +25,6 @@
     "#model to use \n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression \n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "# measure the score of the model \n",
     "from sklearn.metrics import f1_score\n",
@@ -40,7 +38,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Business understanding\n",
+    "We want to understand the most prominent why customers churn and see if we can build packages tailored to increase customer loyalty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data understanding and preperation "
+   ]
   },
   {
    "cell_type": "code",
@@ -258,12 +266,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "############################# bulding the model pipeline #######################"
+    "# Data modeling "
    ]
   },
   {
@@ -410,6 +416,13 @@
     "Log.fit(X_train_scaled,y_train)\n",
     "y_pred_log = Log.predict(X_test_scaled)\n",
     "print(f1_score(y_test,y_pred_log))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate results"
    ]
   },
   {
